Set up server configuration
Co-authored-by: ichayer <ichayer@itba.edu.ar>